--- a/src/routes/public/trigger.html
+++ b/src/routes/public/trigger.html
@@ -26,10 +26,11 @@
 
         triggerSocket.on('trigger', (data) => {
             const { mediaType, url } = data;
-            if (mediaType === 'image') {
+            let triggerType = mediaType.split('/')[0];
+            if (triggerType === 'image') {
                 triggerContainer.innerHTML = `<img src="${url}" alt="trigger" />`;
                 console.log('Image triggered');
-            } else if (mediaType === 'video') {
+            } else if (triggerType === 'video') {
                 triggerContainer.innerHTML = `<video autoplay><source src="${url}" type="${mediaType}" /></video>`;
                 console.log('Video triggered');
             }
