--- a/src/routes/public/trigger.html
+++ b/src/routes/public/trigger.html
@@ -57,7 +57,7 @@
             let randomX = Math.floor(Math.random() * 800) - 250;
             let randomY = Math.floor(Math.random() * 500) - 250;
             let videoPlayer = document.createElement('video');
-            videoPlayer.style.position = 'absolute';
+            videoPlayer.style.position = 'fixed';
             videoPlayer.style.top = `${randomY}px`;
             videoPlayer.style.left = `${randomX}px`;
             videoPlayer.setAttribute('width', '250px');
