--- a/src/routes/public/trigger.html
+++ b/src/routes/public/trigger.html
@@ -19,7 +19,6 @@
         triggerContainer.style.alignItems = 'center';
         triggerContainer.style.height = '500px';
         triggerContainer.style.width = '800px';
-        triggerContainer.style.border = '1px solid black';
 
         let triggerCount = 0;
 
@@ -54,8 +53,8 @@
         });
 
         function createVideoPlayer(url) {
-            let randomX = Math.floor(Math.random() * 800) - 250;
-            let randomY = Math.floor(Math.random() * 500) - 250;
+            let randomX = Math.floor(Math.random() * (800 - 250));
+            let randomY = Math.floor(Math.random() * (500 - 250));
             let videoPlayer = document.createElement('video');
             videoPlayer.style.position = 'fixed';
             videoPlayer.style.top = `${randomY}px`;
