--- a/src/routes/public/trigger.html
+++ b/src/routes/public/trigger.html
@@ -27,7 +27,7 @@
             transports: ['websocket']
         });
 
-        const triggerSocket = io(`/overlay/triggers/${channel}`, {
+        const triggerSocket = io(`/overlays/triggers/${channel}`, {
             forceNew: true,
             transports: ['websocket']
         });
