Better Design and Delete Action
Now you can delete triggers and there is a better design to it

--- a/src/routes/public/managetriggers.html
+++ b/src/routes/public/managetriggers.html
@@ -32,16 +32,11 @@
                         <button class="btn btn-info" id="createTriggerBtn">Create Trigger</button>
                     </div>
                 </div>
-                <div class="triggers">
+                <div class="triggers" id="triggerContainer">
                     <div class="row">
                         <header>
                             <h2 class="title">Triggers</h2>
                         </header>
-                    </div>
-                    <div class="trigger">
-                        <div class="trigger-header">
-                            <h2>{{Name}}</h2>
-                        </div>
                     </div>
                 </div>
             </section>
