--- a/src/routes/public/managetriggers.html
+++ b/src/routes/public/managetriggers.html
@@ -122,7 +122,7 @@
             <div class="file-preview" id="preview"></div>
         </div>
     </div>
-    <script src="/assets/js/triggermanage.js"></script>
+    <script src="/assets/js/min/triggermanage.min.js"></script>
 </body>
 
 </html>
