--- a/src/routes/public/managetriggers.html
+++ b/src/routes/public/managetriggers.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Triggers</title>
-    <link rel="stylesheet" href="/assets/css/managetriggers.css">
+    <link rel="stylesheet" href="/assets/css/min/managetriggers.min.css">
 </head>
 
 <body>
