Trigger Manage UI complete for beta

--- a/src/routes/public/managetriggers.html
+++ b/src/routes/public/managetriggers.html
@@ -42,8 +42,7 @@
             </section>
             <section id="mediaSection" class="mediaSection">
                 <div class="container">
-                    <div class="media-container" id="mediaContainer">
-                    </div>
+                    <div class="media-container" id="mediaContainer"></div>
                 </div>
             </section>
         </div>
