--- a/src/routes/public/furry.html
+++ b/src/routes/public/furry.html
@@ -7,7 +7,7 @@
     <title>Furrimetro</title>
 </head>
 
-<body>
+<body style="color: aqua;">
     <h1 id="supremo"></h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js"></script>
     <script>
