Session and Channel
Updated to the Channel Schema and also update to the login and token session on the users devices to session instead of storage

--- a/src/routes/public/logout.html
+++ b/src/routes/public/logout.html
@@ -9,7 +9,7 @@
 
 <body>
     <script>
-        localStorage.removeItem('token');
+        sessionStorage.removeItem('token');
         window.location.href = '/login';
     </script>
 </body>
