--- a/src/routes/public/clip.html
+++ b/src/routes/public/clip.html
@@ -47,7 +47,7 @@
 
         let channel = window.location.pathname.split('/')[2];
 
-        const socket = io.connect('https://domdimabot.com/', { reconnection: true, transports: ['websocket'] });
+        const socket = io.connect('https://api.domdimabot.com/', { reconnection: true, transports: ['websocket'] });
         // const socket = io.connect('http://localhost:3000/', { reconnection: true, transports: ['websocket'] });
         const channelSocket = io(`/clip/${channel}`, { forceNew: true, transports: ['websocket'] });
 
@@ -79,7 +79,7 @@
 
             profileImg.setAttribute('src', data.profileImg);
 
-            let clipLink = `https://domdimabot.com/video/${channel}?t=${Date.now()}`;
+            let clipLink = `https://api.domdimabot.com/video/${channel}?t=${Date.now()}`;
             // let clipLink = `http://localhost:3000/video/${channel}?t=${Date.now()}`;
 
             const videoSource = document.createElement('source');
