Updates to Triggers WebSocket

--- a/src/routes/public/trigger.html
+++ b/src/routes/public/trigger.html
@@ -22,7 +22,7 @@
 
         let triggerCount = 0;
 
-        const socket = io.connect('https://domdimabot.com/', {
+        const socket = io.connect('https://api.domdimabot.com/', {
             reconnection: true,
             transports: ['websocket']
         });
