--- a/src/routes/public/login.html
+++ b/src/routes/public/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.href = 'https://domdimabot.com/dashboard';
+        window.location.href = 'https://domdimabot.com/login';
     </script>
 </body>
 </html>
