--- a/src/routes/public/clip.html
+++ b/src/routes/public/clip.html
@@ -70,10 +70,12 @@
                 let rgb = hexToRgb(data.streamerColor);
                 if (rgb.r <= 40 && rgb.g <= 40 && rgb.b <= 40) {
                     rightContainer.style.background = 'rgba(204,204,204, 0.2)';
+                    rightContainer.style.backdropFilter = 'blur(10px)';
                     imgContainer.style.border = '3px solid #000';
                 } else {
                     rightContainer.style.background = `rgba(${rgb.r}, ${rgb.g}, ${rgb.b}, 0.2)`;
                     rightContainer.style.color = '#000000';
+                    rightContainer.style.backdropFilter = 'blur(10px)';
                     imgContainer.style.border = `3px solid rgba(${rgb.r}, ${rgb.g}, ${rgb.b}, 1)`;
                 }
                 imgContainer.appendChild(profileImg);
@@ -103,6 +105,7 @@
                     setTimeout(() => {
                         rightContainer.style.transform = 'translateX(0px)';
                         rightContainer.style.opacity = 0;
+                        rightContainer.style.backdropFilter = 'none';
                         imgContainer.style.opacity = 0;
                         imgContainer.style.transform = 'scale(0)'
                         videoPlayer.style.opacity = 0;
