--- a/src/routes/public/clip.html
+++ b/src/routes/public/clip.html
@@ -81,7 +81,7 @@
                 imgContainer.appendChild(profileImg);
             }
 
-            profileImg.setAttribute('src', data.profileImg);
+            profileImg.setAttribute('src', data.profileImage);
 
             let clipLink = `https://api.domdimabot.com/video/${channel}?t=${Date.now()}`;
             // let clipLink = `http://localhost:3000/video/${channel}?t=${Date.now()}`;
